--- a/src/main/java/com/example/view/StudentForm.form
+++ b/src/main/java/com/example/view/StudentForm.form
@@ -326,7 +326,7 @@
                                       <text value="Tìm kiếm"/>
                                     </properties>
                                   </component>
-                                  <component id="6a0ea" class="javax.swing.JTextField" binding="txt_mamh">
+                                  <component id="6a0ea" class="javax.swing.JTextField" binding="txt_text_mh">
                                     <constraints>
                                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                         <preferred-size width="150" height="-1"/>
