--- a/src/main/java/com/example/view/HomeAdmin.form
+++ b/src/main/java/com/example/view/HomeAdmin.form
@@ -1093,7 +1093,7 @@
                                   <text value="Ma Mon hoc"/>
                                 </properties>
                               </component>
-                              <component id="2185" class="javax.swing.JButton">
+                              <component id="2185" class="javax.swing.JButton" binding="btn_tk">
                                 <constraints>
                                   <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                 </constraints>
