--- a/src/main/java/com/example/view/HomeAdmin.form
+++ b/src/main/java/com/example/view/HomeAdmin.form
@@ -37,7 +37,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Chào mừng, ADMIN : "/>
+                  <text value="Chào mừng, Giáo vụ : "/>
                 </properties>
               </component>
               <component id="4d526" class="javax.swing.JLabel" binding="welcomeNameLabel">
