--- a/src/main/java/com/example/view/StudentForm.form
+++ b/src/main/java/com/example/view/StudentForm.form
@@ -233,7 +233,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="e1cfb" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="e1cfb" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -241,11 +241,6 @@
                                 <properties/>
                                 <border type="none"/>
                                 <children>
-                                  <hspacer id="6e47d">
-                                    <constraints>
-                                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                  </hspacer>
                                   <component id="18d16" class="javax.swing.JButton" binding="btn_tk_dkmh">
                                     <constraints>
                                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -270,6 +265,22 @@
                                     </constraints>
                                     <properties>
                                       <text value="Ma Mon hoc"/>
+                                    </properties>
+                                  </component>
+                                  <component id="c5724" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <text value="Lop: "/>
+                                    </properties>
+                                  </component>
+                                  <component id="37aad" class="javax.swing.JLabel" binding="txt_class">
+                                    <constraints>
+                                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <text value=".."/>
                                     </properties>
                                   </component>
                                 </children>
